--- a/docs/allchapters.tex
+++ b/docs/allchapters.tex
@@ -39,7 +39,7 @@
 
 \hfill\vbox
 {
-\hbox{Кафедра высшей математики}
+\hbox{Базовая кафедра 252}
 }
 
 \vfill
@@ -50,14 +50,6 @@
 Коровяковского Степана и Урвачева Романа
 
 \vfill
-
-%{
-%\hbox{Научный руководитель:}
-%\hbox to 16cm {к.т.н, доцент \hrulefill Х.З.~Мамаев}
-%\hbox{}
-%\hbox{Заведующий кафедрой:}
-%\hbox to 16cm {д.ф.-м.н., профессор \hrulefill В.С.~Луговской}
-%}
 
 \vfill
 
